--- a/package.json
+++ b/package.json
@@ -1,40 +1,25 @@
 {
-  "name": "bicycle",
+  "name": "sedona-2lvl",
   "private": true,
-  "description": "",
+  "description": "Личный проект «Седона» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
-    "autoprefixer": "^10.1.0",
-    "browser-sync": "2.26.13",
-    "del": "6.0.0",
-    "eslint": "^7.28.0",
-    "eslint-config-htmlacademy": "^4.0.1",
+    "autoprefixer": "10.2.5",
+    "browser-sync": "2.26.14",
     "gulp": "4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-htmlmin": "5.0.1",
-    "gulp-imagemin": "7.1.0",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.0",
-    "gulp-rename": "2.0.0",
     "gulp-sass": "4.1.0",
     "gulp-sourcemaps": "3.0.0",
-    "gulp-svgstore": "7.0.1",
-    "gulp-uglify-es": "^2.0.0",
-    "gulp-webp": "4.0.1",
-    "pixel-glass": "^1.0.13",
-    "postcss": "^8.2.1",
-    "postcss-csso": "5.0.0",
-    "stylelint": "^13.8.0",
-    "stylelint-config-htmlacademy": "0.1.4"
+    "postcss": "8.2.8",
+    "stylelint": "13.13.1",
+    "stylelint-config-htmlacademy": "0.1.10"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-    "test": "npm run editorconfig && npm run stylelint && eslint source/js/",
-    "build": "gulp build",
-    "scripts": "gulp scripts",
-    "sprite": "gulp sprite",
-    "styles": "gulp styles",
+    "test": "npm run editorconfig && npm run stylelint",
+    "build": "gulp styles",
     "start": "gulp"
   },
   "browserslist": [
@@ -51,9 +36,6 @@
     "source/sass/**/*.scss"
   ],
   "engines": {
-    "node": "14.15.0"
-  },
-  "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "node": "^12 || ^14"
   }
 }
