--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "Личный проект «Седона» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
-    "autoprefixer": "10.2.5",
-    "browser-sync": "2.26.14",
+    "autoprefixer": "10.4.0",
+    "browser-sync": "2.27.7",
+    "del": "^6.0.0",
     "gulp": "4.0.2",
+    "gulp-dart-sass": "^1.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-libsquoosh": "^1.0.12",
     "gulp-plumber": "1.2.1",
-    "gulp-postcss": "9.0.0",
-    "gulp-sass": "4.1.0",
-    "gulp-sourcemaps": "3.0.0",
-    "postcss": "^8.3.9",
+    "gulp-postcss": "9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svgstore": "^9.0.0",
+    "gulp-terser": "^2.1.0",
+    "postcss": "8.3.11",
+    "postcss-csso": "^6.0.0",
     "stylelint": "13.13.1",
-    "stylelint-config-htmlacademy": "0.1.10"
+    "stylelint-config-htmlacademy": "0.1.11"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
@@ -25,7 +32,9 @@
   "browserslist": [
     "last 2 versions",
     "not dead",
-    "not ie <= 11"
+    "not ie <= 11",
+    "not op_mini all",
+    "not < 0.25%"
   ],
   "editorconfig-cli": [
     "*.json",
@@ -36,6 +45,10 @@
     "source/sass/**/*.scss"
   ],
   "engines": {
-    "node": "^12 || ^14"
+    "node": "^16"
+  },
+  "type": "module",
+  "dependencies": {
+    "gulp-svgmin": "^4.1.0"
   }
 }
